--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,4 @@
+/*This file just sets up how everything looks*/
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -6,27 +7,26 @@ body {
     align-items: left;
     height: 100vh;
 
-    /*light*/
-    --color: rgb(148, 44, 44);
-    --background-color: rgb(250,250,250);
+    /* defualt mode*/
+    --color: rgb(4, 0, 0);
+    --background-color: rgb(255, 255, 255);
 
     color: var(--color);
     background-color: var(--background-color);
 }
-
-body.dark-mode{
-    --color: rgb(250,250,250);
-    --background-color: rgb(5,5,5);
+/*Dark mode*/
+body.dark{
+    --color: rgb(205, 202, 202);
+    --background-color: rgb(32, 30, 30);
 }
 button{
     cursor: pointer; 
-    font-size: 30rem;
-    border: 2px solid var(--color);
+    font-size: 1rem;
+    border: 1px solid var(--color);
     border-radius: 5px;
 
     color: var(--color);
     background-color: var(--background-color);
-
 }
 .app {
     padding: 2rem;
