--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,36 +1,36 @@
 /*This file just sets up how everything looks*/
-body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: left;
-    align-items: left;
-    height: 100vh;
+.App {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  height: 100vh;
 
-    /* defualt mode*/
-    --color: rgb(4, 0, 0);
-    --background-color: rgb(255, 255, 255);
+  /* defualt mode*/
+  --color: rgb(4, 0, 0);
+  --background-color: rgb(255, 255, 255);
 
-    color: var(--color);
-    background-color: var(--background-color);
+  color: var(--color);
+  background-color: var(--background-color);
 }
 /*Dark mode*/
 body.dark{
-    --color: rgb(205, 202, 202);
-    --background-color: rgb(32, 30, 30);
+  --color: rgb(205, 202, 202);
+  --background-color: rgb(32, 30, 30);
 }
 button{
-    cursor: pointer; 
-    font-size: 1rem;
-    border: 1px solid var(--color);
-    border-radius: 5px;
+  cursor: pointer; 
+  font-size: 1rem;
+  border: 1px solid var(--color);
+  border-radius: 5px;
 
-    color: var(--color);
-    background-color: var(--background-color);
+  color: var(--color);
+  background-color: var(--background-color);
 }
 .app {
-    padding: 2rem;
-    border-radius: 10px;
-    font-size: 2 rem;
-    text-align: left;
+  padding: 2rem;
+  border-radius: 10px;
+  font-size: 2 rem;
+  text-align: left;
 }
