--- a/client/src/components/SignUp.css
+++ b/client/src/components/SignUp.css
@@ -26,7 +26,7 @@
     color: white;
     font-size: 20px;
     font-weight: 400;
-    text-align: left;
+    text-align: center;
     margin-top: 25px;
     
   }
@@ -43,8 +43,8 @@
     background-color: white;
     padding: 15px;
     border-radius: 8px;
-    margin-top: 57px;
-
+    margin-top: 59px;
+    font-size: 15px;
     cursor: pointer;
     color: lightblue;
     font-weight: bold;
