--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
   align-items: left;
   height: 100vh;
 
-  /* defualt mode*/
+  /* default mode*/
   --color: rgb(4, 0, 0);
   --background-color: rgb(255, 255, 255);
 
