--- a/client/src/components/SignUp.css
+++ b/client/src/components/SignUp.css
@@ -11,7 +11,6 @@
 .auth-form-container, .signup-form {
   display: flex;
   flex-direction: column;
-  
 }
 
 .auth-form-container {
@@ -36,7 +35,7 @@
   input {
     margin: -.4rem 0;
     padding: 1rem;
-    border: none;
+    border: 1px solid blue;
     border-radius: 10px;
   }
 
@@ -46,6 +45,7 @@
     padding: 15px;
     border-radius: 8px;
     margin-top: 59px;
+    position: relative;
     font-size: 15px;
     cursor: pointer;
     color: lightblue;
