--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,21 +12,12 @@
   --background-color: rgb(255, 255, 255);
 
   color: var(--color);
-  background-color: var(--background-color);
+  /*background-color: var(--background-color);*/
 }
 /*Dark mode*/
 body.dark{
   --color: rgb(205, 202, 202);
   --background-color: rgb(32, 30, 30);
-}
-button{
-  cursor: pointer; 
-  font-size: 1rem;
-  border: 1px solid var(--color);
-  border-radius: 5px;
-
-  color: var(--color);
-  background-color: var(--background-color);
 }
 .app {
   padding: 2rem;
